RESOLVED FIXED206143
[LFC][IFC] fast/text/fast-run-width-vs-slow-run-width.html is failing
https://bugs.webkit.org/show_bug.cgi?id=206143
Summary [LFC][IFC] fast/text/fast-run-width-vs-slow-run-width.html is failing
Antti Koivisto
Reported 2020-01-12 03:44:07 PST
due to some floating point issues
Attachments
for bots (2.11 KB, patch)
2020-01-12 03:48 PST, Antti Koivisto
no flags
patch (2.21 KB, patch)
2020-01-12 09:24 PST, Antti Koivisto
zalan: review+
Antti Koivisto
Comment 1 2020-01-12 03:48:03 PST
Created attachment 387465 [details] for bots
Antti Koivisto
Comment 2 2020-01-12 09:24:19 PST
alan
Comment 3 2020-01-12 09:54:03 PST
Comment on attachment 387470 [details] patch Such a shame.
Antti Koivisto
Comment 4 2020-01-13 02:11:11 PST
Committed revision 254425.
Antti Koivisto
Comment 5 2020-01-13 02:11:45 PST
Radar WebKit Bug Importer
Comment 6 2020-01-13 02:12:16 PST
Note You need to log in before you can comment on or make changes to this bug.