[LFC][IFC] fast/text/fast-run-width-vs-slow-run-width.html is failing https://bugs.webkit.org/show_bug.cgi?id=206143

Reviewed by Zalan Bujtas.

The test is constructed so that the preferred width computation produces float value that maps exactly to LayoutUnit
(usually it gets ceiled up). This get converted back to float and the same input widths are substracted from
the total during inline layout. Due to nature of floating point arithmetic this ends up producing slightly
different result and the last word doesn't fit.

* layout/inlineformatting/InlineLineBreaker.cpp:
(WebCore::Layout::LineBreaker::tryWrappingInlineContent const):

When using floats, do an additional equality comparison that accepts values within scaled float epsilon as equal.



Canonical link: https://commits.webkit.org/219258@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254425 268f45cc-cd09-0410-ab3c-d52691b4dbfc